ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-demo-ingress
spec:
  tls:
    - hosts:
      - app-demo.local
      secretName: tls-secret
  rules:
  - host: app-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-demo
            port:
              number: 3000
